# C-Reverse-Shell

./: .gitmodules  CMakeLists.txt  Makefile  README.md  reverse.c  server.c
include/: mainloop.h
src/: host.c  remote.c
